@@ -1,3 +1,14 @@
+2003-05-05  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3248587.  Refine the crash fix for generated image
+	content so that we still set the image's intrinsic width
+	and height properly.
+	
+        Reviewed by john
+
+        * khtml/rendering/render_image.cpp:
+        (RenderImage::setPixmap):
+
 2003-05-04  David Hyatt  <hyatt@apple.com>
 
 	When using the content property in CSS, you can string together
